--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1945,6 +1945,7 @@ section,
     position: absolute;
     inset: 0;
     z-index: 3;
+    display: flex;
     transition: all ease-in-out 0.3s;
     background: rgba(0, 0, 0, 0.6);
     padding: 15px;
@@ -1966,20 +1967,24 @@ section,
     display: inline-block;
     left: 0;
     right: 0;
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 12px;
     color: rgba(255, 255, 255, 0.8);
 }
 
 .projects .portfolio-content .portfolio-info .preview-link,
 .projects .portfolio-content .portfolio-info .details-link {
     position: absolute;
-    left: calc(50% - 40px);
-    font-size: 26px;
+    left: 0;
+    right: 0;
     top: calc(50% - 14px);
     color: #fff;
+    font-size: 26px;
     transition: 0.3s;
     line-height: 1.2;
+}
+
+.projects .portfolio-content .portfolio-info .preview-link {
+    position: static !important;
 }
 
 .projects .portfolio-content .portfolio-info .preview-link:hover,
