--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,12 +3,12 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-    --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto,
+    --default-font: Raleway, Roboto, system-ui, -apple-system, "Segoe UI",
         "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
-    --heading-font: "Raleway", sans-serif;
-    --nav-font: "Montserrat", sans-serif;
+    --heading-font: var(--default-font);
+    --nav-font: var(--default-font);
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
@@ -221,17 +221,16 @@ h6 {
     .navmenu a,
     .navmenu a:focus {
         color: var(--nav-color);
-        font-size: 14px;
+        font-size: 18px;
         padding: 0 2px;
-        font-family: var(--nav-font);
-        font-weight: 500;
+        font-weight: 600;
         display: flex;
         align-items: center;
         justify-content: space-between;
         white-space: nowrap;
         transition: 0.3s;
         position: relative;
-        text-transform: uppercase;
+        text-transform: capitalize;
     }
 
     .navmenu a i,
@@ -495,7 +494,7 @@ h6 {
     }
 
     .navmenu .megamenu-2 .tab-navigation {
-        width: 250px;
+        width: 290px;
         background-color: color-mix(
             in srgb,
             var(--accent-color),
